tests/mypy_function_wrapper_t4.out
tests/mypy_function_wrapper_t4.py:24: error: Argument 2 to "FunctionWrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[Callable[[VarArg(Any), KwArg(Any)], Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 1 error in 1 file (checked 1 source file)
